# ComfyUI_CustomResolution_I2V

./: CustomResolutionI2V.py  CustomResolutionI2V_v1.py  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/: manual_override_behavior.js
