[project]
name = "customresolution_i2v"
description = "Specialized resolution utility node for WanVideo Image-to-Video workflows with 20 preset levels, manual override with auto-rounding, and tooltips for custom dimensions. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# No external dependencies required for basic resolution logic."]

[project.urls]
Repository = "https://github.com/AugustusLXIII/ComfyUI_CustomResolution_I2V"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/AugustusLXIII/ComfyUI_CustomResolution_I2V/wiki"
"Bug Tracker" = "https://github.com/AugustusLXIII/ComfyUI_CustomResolution_I2V/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_CustomResolution_I2V"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

